objects/All_Opportunities_Snapshot__c/All_Opportunities_Snapshot__c.object-meta.xml
<CustomObject>
    <label>All Opportunities Snapshot</label>
    <nameField>
        <displayFormat>snap-{000000}</displayFormat>
        <label>All Opportunities Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Opportunities Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>