objects/All_Opportunities_Snapshot__c/fields/Billings_Amount_Net_Initial_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billings_Amount_Net_Initial_Currency__c</fullName>
    <label>Billings Amount (Net - Initial) Currency</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>