objects/All_Opportunities_Snapshot__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Opportunity Created Date</label>
    <type>Date</type>
</CustomField>