objects/All_Opportunities_Snapshot__c/fields/Day_of_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Quarter__c</fullName>
    <description>Day of the quarter</description>
    <formula>Date_Created__c  -
DATE(
YEAR(Date_Created__c),
MONTH(Date_Created__c),
1
)
+

CASE(
MONTH(Date_Created__c),
1,62,
2,1,
3,29,
4,60,
5,1,
6,32,
7,62,
8,1,
9,32,
10,62,
11,1,
12,31,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day of the quarter</inlineHelpText>
    <label>Day of Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>