objects/All_Opportunities_Snapshot__c/fields/Deal_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Score__c</fullName>
    <label>Deal Score</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>