objects/All_Opportunities_Snapshot__c/fields/Level_1_Global_Sales__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Global_Sales__c</fullName>
    <label>Level 1 (Global Sales)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>