objects/All_Opportunities_Snapshot__c/fields/Level_2_Area__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Area__c</fullName>
    <label>Level 2 (Area)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>