objects/All_Opportunities_Snapshot__c/fields/Level_3_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Sub_Area__c</fullName>
    <label>Level 3 (Sub-Area)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>