objects/All_Opportunities_Snapshot__c/fields/Level_5_Territory__c.field-meta.xml
<CustomField>
    <fullName>Level_5_Territory__c</fullName>
    <label>Level 5 (Territory)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>