objects/All_Opportunities_Snapshot__c/fields/Level_6_Role__c.field-meta.xml
<CustomField>
    <fullName>Level_6_Role__c</fullName>
    <label>Level 6 (Role)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>