objects/All_Opportunities_Snapshot__c/fields/Month_of_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Snapshot__c</fullName>
    <formula>MONTH(Date_Created__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>