objects/All_Opportunities_Snapshot__c/fields/NARR_Upside__c.field-meta.xml
<CustomField>
    <fullName>NARR_Upside__c</fullName>
    <label>NARR - Upside</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>