objects/All_Opportunities_Snapshot__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>