objects/All_Opportunities_Snapshot__c/fields/Snapshot_Number__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Number__c</fullName>
    <label>Snapshot Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>