objects/All_Opportunities_Snapshot__c/fields/Snapshot_Period_vs_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Period_vs_Close_Date__c</fullName>
    <description>True if Snapshot Fiscal period is same as Close Date Fiscal period</description>
    <formula>IF( Snapshot_Fiscal_Period__c = Close_Date_Fiscal_Period__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if Snapshot Fiscal period is same as Close Date Fiscal period</inlineHelpText>
    <label>Snapshot Period vs Close Date</label>
    <type>Checkbox</type>
</CustomField>