objects/All_Opportunities_Snapshot__c/fields/Tanium_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Fiscal_Quarter__c</fullName>
    <formula>CASE(MONTH( Close_Date__c ), 
1, &quot;Q4-&quot;&amp;text(YEAR(Close_Date__c)-1), 
2, &quot;Q1-&quot;&amp;text(YEAR(Close_Date__c)), 
3, &quot;Q1-&quot;&amp;text(YEAR(Close_Date__c)), 
4, &quot;Q1-&quot;&amp;text(YEAR(Close_Date__c)), 
5, &quot;Q2-&quot;&amp;text(YEAR(Close_Date__c)), 
6, &quot;Q2-&quot;&amp;text(YEAR(Close_Date__c)), 
7, &quot;Q2-&quot;&amp;text(YEAR(Close_Date__c)), 
8, &quot;Q3-&quot;&amp;text(YEAR(Close_Date__c)), 
9, &quot;Q3-&quot;&amp;text(YEAR(Close_Date__c)), 
10,&quot;Q3-&quot;&amp;text(YEAR(Close_Date__c)), 
11,&quot;Q4-&quot;&amp;text(YEAR(Close_Date__c)), 
12,&quot;Q4-&quot;&amp;text(YEAR(Close_Date__c)),&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tanium Fiscal Quarter</label>
    <type>Text</type>
</CustomField>