objects/All_Opportunities_Snapshot__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
            <value>
                <fullName>Module Add-on</fullName>
            </value>
            <value>
                <fullName>Renewal/Support</fullName>
            </value>
            <value>
                <fullName>Subscription to Perpetual Conversion</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>MSSP/Consulting</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Paid Pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>