objects/All_Opportunities_Snapshot__c/fields/Week_of_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Week_of_Quarter__c</fullName>
    <description>Week of Quarter</description>
    <formula>IF( Id = &quot;a0i0e000009VDoF&quot;,1,CEILING(Day_of_Quarter__c /7 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Week of Quarter</inlineHelpText>
    <label>Week of Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>